--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
      <!-- CSS  -->
      <link href="css/font.css" rel="stylesheet" />
-     <link href="css/common.css?ver=0917" rel="stylesheet" />
+     <link href="css/common.css" rel="stylesheet" />
      <link href="css/reset.css" rel="stylesheet" />
 
      <!-- Font awesome icon  -->
@@ -46,10 +46,10 @@
   -🧨이슈 해결 : 메인 페이지 용 저용량 영상 제작 - 4000kb 이하 정도의 2분 메인영상 7개 완성
   - 사이트 명 : DreamRoom 으로 픽스, 깃허브에 기록시작
 
- -해야할 일 ::: 🧨이슈 해결 중 :  30분짜리 영상 내 시놀로지에 놔야할지도.. 깃에두면 로딩안될지도 모름 
- (이러면 시놀을 항시켜놔야되는디.... 유튜브로 대체 되는지 테스트... (영상 다 올려봐야함)
+-240918:
+ -🧨이슈 해결:  30분이상 긴 영상들 서버링크가 아닌 유튜브 링크로 수정
+ - 유튜브 썸네일 등록 및 미리보기 이미지로 설정
  
- -- 시연 너무 과질저하 심한듯 다시 렌더리하기 
   
 
 ========================================
@@ -234,8 +234,7 @@
 
                     <li class="cam_jiu">
                          <div class="video-container">
-                              <video controls autoplay muted loop playsinline preload="auto"
-                                   poster="img/bg.jpg">
+                              <video controls autoplay muted loop playsinline preload="auto" poster="img/bg.jpg">
                                    <source src="vid/swdc_jiu.mp4" type="video/mp4" />
                               </video>
 
@@ -251,8 +250,7 @@
 
                     <li class="cam_sua">
                          <div class="video-container">
-                              <video controls autoplay muted loop playsinline preload="auto"
-                                   poster="img/bg.jpg">
+                              <video controls autoplay muted loop playsinline preload="auto" poster="img/bg.jpg">
                                    <source src="vid/swdc_sua.mp4" type="video/mp4" />
                               </video>
 
@@ -263,8 +261,7 @@
 
                     <li class="cam_siyeon">
                          <div class="video-container">
-                              <video controls autoplay muted loop playsinline preload="auto"
-                                   poster="img/bg.jpg">
+                              <video controls autoplay muted loop playsinline preload="auto" poster="img/bg.jpg">
                                    <source src="vid/swdc_siyeon.mp4" type="video/mp4" />
                               </video>
 
@@ -275,8 +272,7 @@
 
                     <li class="cam_handong">
                          <div class="video-container">
-                              <video controls autoplay muted loop playsinline preload="auto"
-                                   poster="img/bg.jpg">
+                              <video controls autoplay muted loop playsinline preload="auto" poster="img/bg.jpg">
                                    <source src="vid/swdc_handong.mp4" type="video/mp4" />
                               </video>
                          </div>
@@ -286,8 +282,7 @@
 
                     <li class="cam_yoohyeon">
                          <div class="video-container">
-                              <video controls autoplay muted loop playsinline preload="auto"
-                                   poster="img/bg.jpg">
+                              <video controls autoplay muted loop playsinline preload="auto" poster="img/bg.jpg">
                                    <source src="vid/swdc_yoohyeon.mp4" type="video/mp4" />
                               </video>
                          </div>
@@ -297,8 +292,7 @@
 
                     <li class="cam_dami">
                          <div class="video-container">
-                              <video controls autoplay muted loop playsinline preload="auto"
-                                   poster="img/bg.jpg">
+                              <video controls autoplay muted loop playsinline preload="auto" poster="img/bg.jpg">
                                    <source src="vid/swdc_dami.mp4" type="video/mp4" />
                               </video>
                          </div>
@@ -308,8 +302,7 @@
 
                     <li class="cam_gahyun">
                          <div class="video-container">
-                              <video controls autoplay muted loop playsinline preload="auto"
-                                   poster="img/bg.jpg">
+                              <video controls autoplay muted loop playsinline preload="auto" poster="img/bg.jpg">
                                    <source src="vid/swdc_gahyun.mp4" type="video/mp4" />
                               </video>
                          </div>
