--- a/sub/with_gahyun_page.html
+++ b/sub/with_gahyun_page.html
@@ -76,14 +76,26 @@
                 </li>
 
                 <li class="cam_gahyun">
-                    <div class="video-container">
-                        <video controls autoplay muted loop playsinline preload="auto" poster="../img/bg.jpg">
-                            <source src="../vid/swdc_gahyun2.mp4?ver=0917" type="video/mp4" />
-                        </video>
+
+                    <div class="video-container" style="position: relative; ">
+                        <!-- 유튜브 썸네일 이미지 -->
+                        <img src="https://img.youtube.com/vi/xA2rHrYTI8U/maxresdefault.jpg" alt="YouTube Thumbnail"
+                            style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;width: 100%;object-position: center center;object-fit: cover;height: 100%;"
+                            id="thumbnail">
+                        <!-- 유튜브 영상 iframe -->
+                        <iframe width="560" height="315" id="youtube-video"
+                            src="https://www.youtube.com/embed/xA2rHrYTI8U?autoplay=1&mute=1&playlist=xA2rHrYTI8U&loop=1"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
                     </div>
+
                     <div class="mute_mic mem_mute_mic"><img src="../img/mic_mute.png"></div>
                     <p class="mem_cam_name">🦊가현</p>
                 </li>
+
+
             </ul>
         </div>
 
