--- a/common_widget.html
+++ b/common_widget.html
@@ -2,7 +2,7 @@
  <!-- 헤더 타이틀 -->
  <header>
       <div class="header_in">
-           <p class="title">Insomnia's Room</p>
+           <p class="title">Dream Room</p>
       </div>
       <div class="fullpage" id="fullscreenBtn"><i class="fas fa-expand"></i></div>
  </header>
